<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="@color/background">



	<include layout="@layout/r_headerbar" android:layout_width="fill_parent"
		android:layout_height="40dip" />

	<LinearLayout android:orientation="horizontal"
		android:gravity="center_horizontal" android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<Button android:id="@+id/b_doneEdition" android:text="@string/DONE"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_marginRight="50dip" android:background="@drawable/b_gen_small_ic"
			android:textColor="@color/white" android:textSize="13dip"
			android:textStyle="bold" />


		<Button android:id="@+id/b_cancelEdition" android:text="@string/CANCEL"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:background="@drawable/b_gen_small_ic" android:textColor="@color/white"
			android:textSize="13dip" android:textStyle="bold" />

		<Button android:id="@+id/b_okView" android:background="@drawable/b_gen_small_ic"
			android:text="@string/BACK" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:enabled="false"
			android:visibility="gone" android:textColor="@color/white"
			android:textSize="13dip" android:textStyle="bold" />

	</LinearLayout>

	<ScrollView android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:background="@color/background"
		android:layout_marginLeft="2dp" android:layout_marginRight="2dp"
		android:layout_marginBottom="2dp" android:layout_gravity="left">

		<LinearLayout android:id="@+id/row_layout"
			android:gravity="left" android:paddingTop="10dip"
			android:paddingLeft="10dip" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="vertical">



		</LinearLayout>

	</ScrollView>
</LinearLayout>